--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "amadeus": "^3.2.0",
     "dree": "^2.1.11",
     "glob": "^7.1.4",
     "node-static": "^0.7.11",
