--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "glob": "^7.1.4",
     "node-fetch": "^2.6.0",
     "node-static": "^0.7.11",
+    "request": "^2.88.0",
     "serve-index": "^1.9.1"
   }
 }
