--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "parse folder of ventyas to generate jSon",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "theophile vast",
