--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "parse folder of ventyas to generate jSon",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "theophile vast",
@@ -14,6 +14,8 @@
     "nodemon": "^1.19.4"
   },
   "dependencies": {
+    "express": "^4.17.1",
+    "nodemon": "^1.19.4",
     "amadeus": "^3.2.0",
     "dree": "^2.1.11",
     "glob": "^7.1.4",
